2006-09-19  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/httpvfs.tcl (vfs::http::urlparse): add method to
	deconstruct the url using RFC 3986 semantics.
	(vfs::http::Mount): add support for HTTP basic auth if a user was
	passed in the url

2006-09-15  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/pkgIndex.tcl: bump vfs::http to 0.6
	* library/httpvfs.tcl:  Add urlname encoding to handle the
	translation of "/foo/my file (2).txt" as
	foo/my%20file%20%282%29.txt, per RFC 3986, for the user.  This is
	controlled via a new ?-urlencode bool? mount option, default 1.
		**** POTENTIAL INCOMPATIBILITY ****
		**** if user was "working around" at [open] level ****

2006-09-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/httpvfs.tcl: rewritten to clean up http tokens and
	actually interpret data from them.
	(Mount): If a url doesn't return "ok" status, return failure.
	(stat, access): If HEAD returns 404 or status != ok, return ENOENT.

	* library/vfslib.tcl: code cleanup

2006-08-30  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/vfs.c: move static globals to being thread-specific.  If
	you wish to access a mount point or volume in a thread, you need
	to remount the file in the thread.  This is a change from the
	previous behavior that would allow access across threads, which
	was unsafe and would potentially crash.
		**** POTENTIAL INCOMPATIBILITY ****

2006-06-22  Jean-Claude Wippler  <jcw@equi4.com>

	* library/mkclvfs.tcl: Updated to latest 1.4 revision

2006-05-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/vfs.c (VfsOpenFileChannel): handle closing channels that
	were inherited as std channels. [Bug 1468291]

2006-03-12  Vince Darley <vincentdarley@sourceforge.net>

	* library/ftpvfs.tcl: provide caching of listings to improve
	performance for many standard use cases.

2006-02-27  Jean-Claude Wippler  <jcw@equi4.com>

	* library/mkclvfs.tcl: Small optimization so a writable starkit
	does not cause a real commit if no changes at all were made.
